# tessera

./: .gitignore  README.md
.github/workflows/: publish.yml  test.yml
docs/: index.html
docs/sample-data/: generate.py
tessera/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
tessera-live/: README.md
tessera-live/.claude-plugin/: plugin.json
tessera-live/hooks/: hooks.json
tessera/.claude-plugin/: plugin.json
tessera/commands/: tessera.md
tessera/docs/: ARCHITECTURE.md  adding-an-agent.md
tessera/docs/schema/: v1.md
tessera/launchd/: com.tessera.weekly.plist
tessera/src/tessera/: __init__.py  _normalize_script.py  artifacts.py  backends.py  changelog.py  cli.py  experiment_evaluator.py  experiments.py  history.py  logbook.py  multilens.py  normalizers.py  pipeline.py
tessera/src/tessera/live/: __init__.py  experiments.py  hook.py  rating_lookup.py  rules.py  state.py
tessera/src/tessera/narratives/: __init__.py  cache.py  calibration.py  compressor.py  dashboard.py  deterministic.py  eval.py  extractor.py  outcomes.py  pipeline.py  render.py  synthesis.py  validator.py
tessera/tests/: conftest.py  test_apply_patch_extraction.py  test_artifacts.py  test_backends.py  test_cache.py  test_calibration.py  test_changelog.py  test_comparative_grounding.py  test_dashboard.py  test_dashboard_inherited_ratings.py  test_deterministic.py  test_experiments.py  test_history.py  test_logbook.py  test_multilens.py  test_normalizers_registry.py  test_outcomes.py  test_synthesis.py  test_synthesis_json_recovery.py  test_validator.py
