[project]
name = "tessera-agents"
version = "0.9.1"
description = "Reflect on how you actually use AI coding agents. Reads your local Claude Code, Codex, and Gemini CLI traces, builds rich per-session narratives, and synthesizes cross-session patterns you can act on this week — with an interactive HTML dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "tessera contributors" }]
keywords = [
    "ai-agents",
    "claude-code",
    "codex",
    "gemini",
    "retrospective",
    "developer-tools",
    "observability",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "claude-agent-sdk>=0.1.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/annasba07/tessera"
Repository = "https://github.com/annasba07/tessera"
Issues = "https://github.com/annasba07/tessera/issues"
Documentation = "https://github.com/annasba07/tessera/tree/main/docs"

[project.scripts]
tessera = "tessera.cli:main"
tessera-live-hook = "tessera.live.hook:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q"]
